--- a/project/client/index.html
+++ b/project/client/index.html
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div class="hidden" id="preview-metadata">
-          <h3>EXIF Metadata</h3>
+          <h3>Camera Metadata</h3>
           <pre><code id="exif-json"></code></pre>
         </div>
       </div>
